# horse-racing-analyzer

./: .gitignore  README.md  package.json
.github/workflows/: ci.yml  deploy.yml  security-check.yml
.zap/: rules.tsv
backend/: pyproject.toml  render.yaml  requirements.txt
backend/app/: config.py  db.py  main.py
backend/app/api/: feedback.py
backend/app/api/routes/: comments.py  races.py  stats.py  sync.py
backend/app/models/: __init__.py  base.py  betting.py  comment.py  feedback.py  horse.py  race.py  stats.py
backend/app/services/: scraper.py
backend/scripts/: backup.py  backup_cron.sh  healthcheck.py  performance_test.py  s3_backup.py  security_check.py
backend/tests/: conftest.py  test_api_comments.py  test_api_races.py  test_api_root.py  test_api_stats.py  test_api_sync.py  test_scraper.py
docs/: api_docs.md  database_diagram.md  maintenance_plan.md  quality_assurance.md  security_guide.md  setup_guide.md
frontend/: .eslintrc.json  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  vercel.json
frontend/scripts/: security_check.js
frontend/security_reports/: npm_audit_report.json  security_report.json
frontend/src/__tests__/__utils__/: test-utils.tsx
frontend/src/__tests__/components/: Dashboard.test.tsx  Layout.test.tsx  RaceDetail.test.tsx
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/feedback/: page.tsx
frontend/src/lib/: api.ts
frontend/src/store/: commentStore.ts  raceStore.ts
frontend/src/styles/: theme.ts
(+4 files in other folders)
